--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -1,8 +1,14 @@
 {
     "app": {
         "menu": {
-            "apps": "Applications",
-            "settings": "Settings"
+            "dashboard": "Dashboard",
+            "clients": "Clients",
+            "marketplace": "Marketplace"
         }
+    },
+    "dashboardMenu": {
+        "apps": "Applications",
+        "members": "Members",
+        "props": "Properties"
     }
 }
