feat: 🎸 request and utils modules

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -1,9 +1,14 @@
 {
     "app": {
-        "menu": {
+        "navbar": {
             "dashboard": "Dashboard",
             "clients": "Clients",
             "marketplace": "Marketplace"
+        },
+        "avatarDropdown": {
+            "settings": "Account Settings",
+            "signout": "Sign Out",
+            "create": "Create a New Account"
         }
     },
     "dashboardMenu": {
