feat: 🎸 optimize scroll bars

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -20,5 +20,10 @@
         "workstation": "Workstation",
         "members": "Members",
         "details": "Details"
+    },
+    "pages": {
+        "client_workstation": {
+            "all_channels": "All Channels"
+        }
     }
 }
