feat: 🎸 optimize clients dropdown

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -27,5 +27,12 @@
             "create": "New",
             "switch": "Switch"
         }
+    },
+    "components": {
+        "clientsDropdown": {
+            "noMore": "No More",
+            "loadMore": "Load More",
+            "loading": "Loading..."
+        }
     }
 }
