feat: 🎸 support empty

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -28,7 +28,11 @@
             "loadMore": "Load More",
             "loading": "Loading...",
             "viewAll": "View all clients",
-            "create": "Create Client"
+            "create": "Create Client",
+            "empty": {
+                "title": "No Clients",
+                "subTitle": "Clients will help you connect to your devices"
+            }
         }
     }
 }
