feat: 🎸 support dropdown search

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -32,7 +32,8 @@
             "empty": {
                 "title": "No Clients",
                 "subTitle": "Clients will help you connect to your devices"
-            }
+            },
+            "searchPlaceholder": "Type to search..."
         }
     }
 }
