feat: 🎸 add channel component

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -34,6 +34,12 @@
                 "subTitle": "Clients will help you connect to your devices"
             },
             "searchPlaceholder": "Type to search..."
+        },
+        "channelPanel": {
+            "error": {
+                "title": "Failed to load channel {{channelId}}",
+                "subTitle": "Please check your network or the channel's configuration"
+            }
         }
     }
 }
