feat: 🎸 optimize loading and error styles

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -40,6 +40,9 @@
                 "title": "Failed to load channel {{channelId}}",
                 "subTitle": "Please check your network or the channel's configuration"
             }
+        },
+        "tab": {
+            "errored": "Error"
         }
     }
 }
