feat: 🎸 sticky buttons wrapper

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -12,6 +12,7 @@
     },
     "clientsSidebarMenu": {
         "workstation": "Workstation",
+        "channels": "Channels",
         "members": "Members",
         "details": "Details"
     },
