fix: 🐛 sticky tab buttons wrapper

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -43,7 +43,8 @@
             }
         },
         "tab": {
-            "errored": "Error"
+            "errored": "Error",
+            "newInstance": "New Channel Instance"
         }
     }
 }
