feat: 🎸 welcome page

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -20,7 +20,11 @@
         "client_workstation": {
             "all_channels": "All Channels",
             "create": "New",
-            "switch": "Switch"
+            "switch": "Switch",
+            "welcome": {
+                "title": "Welcome to Pugio",
+                "subTitle": "There is no tabs created, you can click the button below to create a new tab to run a channel"
+            }
         }
     },
     "components": {
