feat: 🎸 channel list loading

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -55,7 +55,8 @@
                 "builtIn": "Built-in",
                 "thirdParties": "Third Parties"
             },
-            "create": "Create Channel"
+            "create": "Create Channel",
+            "searchPlaceholder": "Type to search..."
         }
     }
 }
