feat: 🎸 select channel list item

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -56,7 +56,10 @@
                 "thirdParties": "Third Parties"
             },
             "create": "Create Channel",
-            "searchPlaceholder": "Type to search..."
+            "searchPlaceholder": "Type to search...",
+            "loadMore": "Load More",
+            "loading": "Loading...",
+            "noMore": "No More"
         }
     }
 }
