feat: 🎸 locale context for built-in channels

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -61,5 +61,12 @@
             "loading": "Loading...",
             "noMore": "No More"
         }
+    },
+    "builtin": {
+        "webTerminal": {
+            "reconnect": "Reconnect",
+            "clipboard": "Clipboard",
+            "close": "Close Connection"
+        }
     }
 }
