feat: 🎸 socket authentication

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -12,7 +12,7 @@
     },
     "clientsSidebarMenu": {
         "workstation": "Workstation",
-        "channels": "Channels",
+        "status": "Status",
         "members": "Members",
         "details": "Details"
     },
