feat: 🎸 clients selector and create button

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -10,7 +10,8 @@
             "settings": "Account Settings",
             "signout": "Sign Out",
             "create": "Create a new account"
-        }
+        },
+        "createClient": "Client"
     },
     "clientsSidebarMenu": {
         "workstation": "Workstation",
