--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -45,7 +45,8 @@
             },
             "userCardMenu": {
                 "delete": "Delete Member"
-            }
+            },
+            "add": "Add Members"
         }
     },
     "components": {
