feat: 🎸 use react-mui-confirm

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -90,7 +90,7 @@
             "loading": "Loading...",
             "noMore": "No More"
         },
-        "muibox": {
+        "confirm": {
             "confirm": "Confirm",
             "ok": "OK",
             "cancel": "Cancel"
