feat: 🎸 finish user-selector component

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -104,7 +104,11 @@
             "loading": "Loading...",
             "noMore": "No More",
             "clearAll": "Clear All",
-            "clearSelected": "Clear Selected"
+            "clearSelected": "Clear Selected",
+            "noSelected": {
+                "title": "No Selected Users",
+                "subTitle": "No users selected, you can select some users in the 'Search' pad"
+            }
         }
     },
     "builtin": {
