feat: 🎸 optimize dropdown list item button styles

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -80,8 +80,8 @@
         },
         "channelList": {
             "tabs": {
-                "builtIn": "Built-in",
-                "thirdParties": "Third Parties"
+                "official": "Official",
+                "fromMarket": "From Market"
             },
             "create": "Create",
             "install": "Install",
