fix: 🐛 locale text

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -21,8 +21,8 @@
         "details": "Details"
     },
     "pages": {
-        "client_workstation": {
-            "all_channels": "All Channels",
+        "clientWorkstation": {
+            "allChannels": "All Channels",
             "create": "New",
             "switch": "Switch",
             "welcome": {
@@ -32,7 +32,8 @@
             "offline": {
                 "title": "Client Offline",
                 "subTitle": "The client is currently offline, please check the client status and retry later"
-            }
+            },
+            "createTab": "Create a Tab"
         },
         "clientMembers": {
             "tabs": {
