feat: 🎸 channel item

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -89,7 +89,8 @@
             "searchPlaceholder": "Type to search...",
             "loadMore": "Load More",
             "loading": "Loading...",
-            "noMore": "No More"
+            "noMore": "No More",
+            "info": "Information"
         },
         "confirm": {
             "confirm": "Confirm",
