style: 💄 optimize ChannelListItem styles

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -90,7 +90,8 @@
             "loadMore": "Load More",
             "loading": "Loading...",
             "noMore": "No More",
-            "info": "Information"
+            "info": "Information",
+            "delete": "Delete"
         },
         "confirm": {
             "confirm": "Confirm",
