chore: 🤖 typo change

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -84,7 +84,7 @@
         "channelList": {
             "tabs": {
                 "official": "Official",
-                "fromMarket": "From Market"
+                "fromMarket": "Market"
             },
             "searchPlaceholder": "Type to search...",
             "loadMore": "Load More",
