feat: 🎸 finish workstation optimization

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -34,7 +34,7 @@
                 "subTitle": "The client is currently offline, please check the client status and retry later"
             },
             "goToStartup": "Go to Startup",
-            "createChannel": "Create",
+            "createChannel": "Channel",
             "installChannel": "Install",
             "startup": "Startup"
         },
