--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -40,6 +40,7 @@
         },
         "clientMembers": {
             "tabs": {
+                "all": "All",
                 "members": "Members",
                 "admins": "Admins"
             },
