feat: 🎸 client members page

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -117,6 +117,13 @@
             "addUsers": "Add Users",
             "selectAll": "Select All",
             "unselectAll": "Unselect All"
+        },
+        "clientRoleSelector": {
+            "roles": {
+                "1": "Admin",
+                "2": "Member"
+            },
+            "unknown": "Unknown"
         }
     },
     "builtin": {
