feat: 🎸 optimize workstation transaction

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -36,7 +36,9 @@
             "goToStartup": "Go to Startup",
             "createChannel": "Channel",
             "installChannel": "Install",
-            "startup": "Startup"
+            "startup": "Startup",
+            "home": "Home",
+            "goBack": "Go Back"
         },
         "clientMembers": {
             "tabs": {
