fix: 🐛 flash popover

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -38,7 +38,8 @@
             "installChannel": "Install",
             "startup": "Startup",
             "home": "Home",
-            "goBack": "Go Back"
+            "goBack": "Go Back",
+            "createTab": "Create a Tab"
         },
         "clientMembers": {
             "tabs": {
