feat: 🎸 client status page

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -61,6 +61,13 @@
             "exceptions": {
                 "deleteMembers": "Failed to delete members"
             }
+        },
+        "clientStatus": {
+            "unsupported": {
+                "title": "Currently not Supported",
+                "subTitle": "So sorry about this, maybe in the next future updates, it will be supported",
+                "goToWorkstation": "Back to Workstation"
+            }
         }
     },
     "components": {
