refactor: 💡 system status load method and modules

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -76,7 +76,10 @@
             },
             "chart": {
                 "memoryUsage": "Memory Usage",
-                "swapMemoryUsage": "Swap Memory Usage",
+                "memUsage": {
+                    "mem": "Memory",
+                    "swapmem": "Swap Memory"
+                },
                 "cpuLoad": "CPU Load",
                 "disksIO": "Disks IO"
             }
