feat: 🎸 load charts method and refresh

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -82,7 +82,8 @@
                 },
                 "cpuLoad": "CPU Load",
                 "disksIO": "Disks IO"
-            }
+            },
+            "refresh": "Refresh"
         }
     },
     "components": {
