feat: 🎸 finish client status page

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -83,7 +83,11 @@
                 "cpuLoad": "CPU Load",
                 "disksIO": "Disks IO"
             },
-            "refresh": "Refresh"
+            "refresh": "Refresh",
+            "chartsError": {
+                "title": "Failed to load chart {{ chartName }}",
+                "subTitle": "Refresh to reload"
+            }
         }
     },
     "components": {
