refactor: 💡 move svg into inline version

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -3,6 +3,7 @@
         "navbar": {
             "clients": "Clients",
             "explore": "Explore",
+            "home": "Home",
             "development": "Developing",
             "issues": "Issues"
         },
