refactor: 💡 UserSearcher component

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -161,6 +161,12 @@
             "selectAll": "Select All",
             "unselectAll": "Unselect All"
         },
+        "userSearcher": {
+            "search": "Search",
+            "loadMore": "Load More",
+            "loading": "Loading...",
+            "noMore": "No More"
+        },
         "clientRoleSelector": {
             "roles": {
                 "1": "Admin",
