feat: 🎸 add refresh button for client members page

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -15,7 +15,8 @@
         "createClient": "Client",
         "searchPlaceholder": "Type to search...",
         "yes": "YES",
-        "no": "NO"
+        "no": "NO",
+        "refresh": "Refresh"
     },
     "clientsSidebarMenu": {
         "workstation": "Workstation",
