feat: 🎸 optimize client details form styles

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -101,6 +101,8 @@
             "verified": "Device Verified",
             "dangerZone": "Danger Zone",
             "keyPair": "Key Pair",
+            "initializePublicKey": "Initialize Public Key",
+            "initializePrivateKey": "Initialize Private Key",
             "danger": {
                 "transformOwnership": {
                     "title": "Transfer Ownership",
