--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -16,7 +16,9 @@
         "searchPlaceholder": "Type to search...",
         "yes": "YES",
         "no": "NO",
-        "refresh": "Refresh"
+        "refresh": "Refresh",
+        "cancel": "Cancel",
+        "ok": "OK"
     },
     "clientsSidebarMenu": {
         "workstation": "Workstation",
@@ -136,7 +138,7 @@
             "transferOwnership": {
                 "title": "Transfer Client Ownership",
                 "description": "You should understand admin access, members and membership record will be revoked after a client is transferred.",
-                "confirmText": "Please type \"{{ clientName }}\" to confirm.",
+                "confirmText": "Transferring ownership to user {{ userName }}({{ userEmail }})",
                 "okButtonText": "Confirm & Transfer"
             }
         }
