feat: 🎸 keep 2 hours records

--- a/public/i18n/locales/en_US.json
+++ b/public/i18n/locales/en_US.json
@@ -88,8 +88,7 @@
             "dateRange": {
                 "halfHour": "Half an Hour",
                 "hour": "One Hour",
-                "day": "One Day",
-                "week": "One Week"
+                "twoHours": "2 Hours"
             },
             "chart": {
                 "memoryUsage": "Memory Usage",
